--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "debug": "^3.0.0",
     "dotenv": "^4.0.0",
     "selenium-standalone": "^6.7.0",
     "webdriverio": "^4.8.0"
